2004-01-16  Malcolm Purvis  <malcolmpurvis@optushome.com.au>

	* ui-gtk.c (__internal_callback_marshal): Marshalling data to
	return to GTK requires a different API to marshalling data to use
	as GTK parameters.
	* ui-gtk.c (lisp_to_gtk_ret_type): New. 

2004-01-23  Stephen J. Turnbull  <stephen@xemacs.org>

	* specifier.c (Fvalid_specifier_type_p): Fix docstring typo.

2003-12-29  Malcolm Purvis  <malcolmpurvis@optushome.com.au>

	* sysdll.c (dll_function): Added support for finding symbols in
	Darwin shared libraries as well in Darwin bundles.
	* sysdll.c (image_for_address): New.
	* sysdll.c (my_find_image): New.
	* sysdll.c (search_linked_libs): New.

2004-01-03  James C. McPherson  <james.mcpherson@optusnet.com.au>

	* doc.c (Fdocumentation_property): GCPROd variables cannot be
	declared register.
	* eval.c (Fprog1): Ditto.
	* eval.c (Fprog2): Ditto.
	* fns.c (Fnreverse): Ditto.
	* lread.c (readevalloop): Ditto.

2003-11-29  Jerry James  <james@xemacs.org>

	* emodules.c (emodules_load): Remove dll_error parameter.
	* sysdll.c: Ditto.
	* sysdll.h: Ditto.  Remove unused DLLEXPORT definitions.
	* ui-gtk.c (initialize_dll_cache): dll_open now takes a Lisp_Object.
	* ui-gtk.c (Fdll_load): Ditto.  Remove dll_error parameter.

2003-11-18  Jerry James  <james@xemacs.org>

	* config.h.in: Add TYPEOF.
	* emacs.c (voodoo_free_hook): Revert the previous patch and use
	TYPEOF instead.
	* emacs.c (Fkill_emacs): Ditto.
	* ralloc.c (init_ralloc): Ditto.
	* ralloc.c (r_alloc_reinit): Ditto.

2003-11-14  Jerry James  <james@xemacs.org>

	* emacs.c (voodoo_free_hook): ICC understands typeof.
	* emacs.c (Fkill_emacs): Ditto.
	* ralloc.c (init_ralloc): Ditto.
	* ralloc.c (r_alloc_reinit): Ditto.

2003-11-14  Jerry James  <james@xemacs.org>

	* config.h.in: Remove last traces of GNU DLD.

2003-11-01  Markus Kaltenbach  <makalten@informatik.uni-tuebingen.de>

	* alloc.c (garbage_collect_1):
	move kkcc_marking() call inside the while loop containing all